# simpleaudit

./: .gitattributes  .gitignore  CODEOWNERS  CODE_OF_CONDUCT.md  DPG.md  FAQ.md  GOVERNANCE.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
examples/: Copy_of_quickstart_gemma_hf.ipynb  LISS_simpleaudit_example.ipynb  cross_judge_example.py  custom_judge_ollama.py  fake_audit.py  hei_refusal_ollama.py  judge_configs_ollama.py  local_ollama_audit.py  mock_server.py  quickstart.ipynb  quickstart_gemma_hf.ipynb  quickstart_model_auditor.ipynb  quickstart_vllm.ipynb  results_custom_judge_ollama.json  results_default_ollama.json  results_hei_abstention.json  results_hei_custom_no.json  results_judge_factuality.json  results_judge_helpfulness.json  results_judge_safety.json  test_visualisation_results.json
examples/bullshit_bench/: bsb_gemma3_12b_health_20260318_1826.json  run_bullshitbench.py
examples/helsedir_sexhealth_no/: abstention_analysis.md  comparison.csv  extract_conversations.py  qwen_abstention.json  qwen_binary_abstention.json  qwen_conversations.json  qwen_helsedir_no.json  qwen_helsedir_no_rag.json  qwen_safety.json  rejudge_abstention_experiment.py  rejudge_stored_conversations.py
examples/local_audit_example_results/: local_audit_results.json  readme.md
examples/nav_aap/: nav_aap_haiku_4_5.json  nav_aap_sonnet_4_6.json  run_nav_aap_eval.py  smoke_test.py  summary.csv
results/: run_skatteetaten_baseline.py  skatteetaten_baseline_combined_20260429.json  skatteetaten_baseline_haiku45_20260429.json  skatteetaten_baseline_sonnet46_20260429.json  skatteetaten_baseline_summary_20260429.md
simpleaudit/: .gitignore  README.md  __init__.py  auditor.py  cli.py  client.py  cross_judge.py  experiment.py  model_auditor.py  providers.py  repeated_results.py  results.py  utils.py
simpleaudit/judges/: __init__.py  abstention.py  binary_abstention.py  factuality.py  harm.py  helpfulness.py  helsedir_sexhealth_no.py  helsedir_sexhealth_no_rag.py  safety.py  simpleaudit_judge_guidelines_v1.0.md
simpleaudit/scenarios/: __init__.py  bullshitbench_health.py  bullshitbench_v1_v2.py  hei_refusal.py  helfo.py  helfo_README.md  helpmed.py  nav_aap.py  nav_aap_README.md  rag.py  safety.py  simpleaudit_scenario_guidelines_v1.0.md  skatteetaten.py  skatteetaten_README.md  system_prompt.py  ung.py
simpleaudit/simpleaudit/: auditor.py
simpleaudit/simpleaudit/scenarios/: health.py
simpleaudit/visualization/: README.md  audit_visualizer.html  scenario_viewer.html  server.py  test_visualisation_results.json  visualizer.html
tests/: fakes.py  test_anthropic_judge_default_path.py  test_audit_flow.py  test_basic.py  test_bugfixes.py  test_cross_judge.py  test_custom_prompts.py  test_expected_behavior.py  test_fakes.py  test_json_format.py  test_judge_registry.py  test_judge_response_schema.py  test_local_providers.py  test_model_auditor.py  test_repeated_experiments.py  test_resumable_experiments.py  test_scenario_data.py  test_strip_thinking.py  test_target_api_key.py  test_token_counting.py
