[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simpleaudit"
    version = "0.1.6"
description = "Lightweight AI Safety Auditing Framework"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "SimpleAudit Contributors"}
]
keywords = ["ai", "safety", "audit", "red-team", "llm", "rag", "testing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Testing",
]
requires-python = ">=3.11"
dependencies = [
    "any-llm-sdk>=1.8.3",
    "tqdm>=4.66.0",
]

[project.scripts]
simpleaudit = "simpleaudit.cli:main"

[project.optional-dependencies]
plot = ["matplotlib>=3.5.0"]
visualize = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
all = ["simpleaudit[plot,visualize,dev]"]

[project.urls]
Homepage = "https://github.com/kelkalot/simpleaudit"
Documentation = "https://github.com/kelkalot/simpleaudit#readme"
Repository = "https://github.com/kelkalot/simpleaudit"
Issues = "https://github.com/kelkalot/simpleaudit/issues"
PyPI = "https://pypi.org/project/simpleaudit/"

[tool.setuptools.packages.find]
where = ["."]
include = ["simpleaudit*"]

[tool.setuptools.package-data]
simpleaudit = [
    "visualization/*.html",
    "visualization/*.png",
]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=simpleaudit --cov-report=html --cov-report=term-missing"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["simpleaudit"]
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
skip_covered = false
skip_empty = true

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]
